--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,8 +93,10 @@ dependencies {
     implementation "com.google.firebase:firebase-storage:$firebaseVersion"
     implementation "com.google.firebase:firebase-core:$firebaseCoreVersion"
 
-
-
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.3.1'
+    implementation 'com.onesignal:OneSignal:3.5.4'
+    implementation 'com.facebook.stetho:stetho:1.4.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.4.1'
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
     implementation 'com.facebook.android:facebook-android-sdk:4.29.0'
 
