--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <!--this class is instantiated before any of the application's components.-->
     <!--.di.AppController-->
     <application
-        android:name=".di.AppController"
+        android:name=".FellowshipApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
