--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 29
     defaultConfig {
         applicationId "io.techministry.android.fellowshipmissionchurch"
-        minSdkVersion 15
-        targetSdkVersion 27
+        minSdkVersion 19
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,6 +27,16 @@ android {
 
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude("META-INF/*.kotlin_module")
+        exclude 'androidsupportmultidexversion.txt'
     }
 }
 
@@ -56,6 +66,10 @@ ext {
     playServicesVersion = '16.0.0'
     googleMapsVersion = '15.0.1'
 
+}
+
+repositories {
+    mavenCentral()
 }
 
 dependencies {
@@ -93,12 +107,15 @@ dependencies {
     implementation "com.google.firebase:firebase-storage:$firebaseVersion"
     implementation "com.google.firebase:firebase-core:$firebaseCoreVersion"
 
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.3.1'
+//    implementation 'com.github.kittinunf.fuel:fuel-android:1.3.1'
+    implementation 'com.github.kittinunf.fuel:fuel-android:2.2.3'
+
     implementation 'com.onesignal:OneSignal:3.5.4'
     implementation 'com.facebook.stetho:stetho:1.4.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.4.1'
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
-    implementation 'com.facebook.android:facebook-android-sdk:4.29.0'
+//    implementation 'com.facebook.android:facebook-android-sdk:4.29.0'
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
     ///// Other Libraries ////
     implementation "com.google.code.gson:gson:$gsonVersion"
@@ -131,7 +148,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
-
 
 
 apply plugin: 'com.google.gms.google-services'
