--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "io.techministry.android.fellowshipmissionchurch"
+        applicationId "io.techministry.android.missionchurch"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -24,6 +24,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    testOptions {
+        unitTests.returnDefaultValues = true
     }
 
     packagingOptions {
@@ -70,7 +73,7 @@ ext {
     timeAgoVersion = '3.0.2'
     playServicesVersion = '16.0.0'
     googleMapsVersion = '15.0.1'
-
+    fuelHTTPversion = '1.15.1'
 }
 
 repositories {
@@ -117,15 +120,18 @@ dependencies {
     implementation "com.google.firebase:firebase-storage:$firebaseVersion"
     implementation "com.google.firebase:firebase-core:$firebaseCoreVersion"
 
-//    implementation 'com.github.kittinunf.fuel:fuel-android:1.3.1'
-    implementation 'com.github.kittinunf.fuel:fuel-android:2.2.3'
+//    implementation 'com.github.kittinunf.fuel:fuel-android:1.16.0'
+//    implementation 'com.github.kittinunf.fuel:fuel-android:2.2.3'
+    implementation "com.github.kittinunf.fuel:fuel:$fuelHTTPversion" //for JVM
+    implementation "com.github.kittinunf.fuel:fuel-android:$fuelHTTPversion" //for Android
 
     implementation 'com.onesignal:OneSignal:3.5.4'
     implementation 'com.facebook.stetho:stetho:1.4.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.4.1'
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
 //    implementation 'com.facebook.android:facebook-android-sdk:4.29.0'
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+//    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 
     ///// Other Libraries ////
     implementation "com.google.code.gson:gson:$gsonVersion"
