--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,18 +5,19 @@
     <!--this class is instantiated before any of the application's components.-->
     <!--.di.AppController-->
     <application
-        android:name=".FellowshipApplication"
+        android:name=".di.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_mcc_2020"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_mcc_2020_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config">
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_api_key_fmc"/>
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -44,14 +45,27 @@
             android:name=".ui.posts.postdetail.PostDetailActivity"
             android:screenOrientation="portrait"/>
 
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
+
+        <provider android:authorities="com.facebook.app.FacebookContentProvider120085814675079"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
 
-        <activity
-            android:name="com.facebook.FacebookActivity"
+        <activity android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
