--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 #Over 105 compile errors
-android.useAndroidX=true
+#android.useAndroidX=true
 #android.enableJetifier=true
